filtering by city and category returns EventDTO